fix overlap issue
fix article description overlap issue

--- a/style.css
+++ b/style.css
@@ -328,3 +328,6 @@ hr {
     scrollbar-width: none;  /* Firefox */
   }
 
+.contents_style{
+    line-height: 27px;
+}
